fixed the height of the comments container so that it can be visible even if there are no comments

--- a/src/assets/sass/imports/_live-class.scss
+++ b/src/assets/sass/imports/_live-class.scss
@@ -449,6 +449,7 @@
               }
 
               .inner-comments {
+                min-height: 360px;
                 max-height: 360px;
                 overflow-y: auto;
 
